--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,31 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# PHPize
+Makefile.global
+acinclude.m4
+aclocal.m4
+autom4te.cache/
+build/
+config.guess
+config.h.in
+config.sub
+configure
+configure.in
+install-sh
+ltmain.sh
+missing
+mkinstalldirs
+run-tests.php
+.deps
+Makefile
+Makefile.fragments
+Makefile.objects
+config.h
+config.log
+config.nice
+config.status
+configure.lineno
+libtool
+.libs/
